alteração no index

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/style.css">
-    <link rel="stylesheet" href="../styles/home.css">
-    <link rel="stylesheet" href="../styles/things-of-travel.css">
-    <link rel="stylesheet" href="../styles/exclusive.css">
-    <link rel="stylesheet" href="../styles/vacation.css">
-    <link rel="stylesheet" href="../styles/about.css">
-    <link rel="stylesheet" href="../styles/update.css">
-    <link rel="stylesheet" href="../styles/subscribe.css">
-    <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/home.css">
+    <link rel="stylesheet" href="./styles/things-of-travel.css">
+    <link rel="stylesheet" href="./styles/exclusive.css">
+    <link rel="stylesheet" href="./styles/vacation.css">
+    <link rel="stylesheet" href="./styles/about.css">
+    <link rel="stylesheet" href="./styles/update.css">
+    <link rel="stylesheet" href="./styles/subscribe.css">
+    <link rel="stylesheet" href="./styles/footer.css">
     <title>Travel Agency</title>
 </head>
 
@@ -23,7 +23,7 @@
             <div class="logo">
                 <h2>Trabook</h2>
                 <figure class="logo">
-                    <img src="../assets/logo.svg" alt="Logo-agency" />
+                    <img src="./assets/logo.svg" alt="Logo-agency" />
                 </figure>
             </div>
 
@@ -57,8 +57,8 @@
                 </div>
 
                 <div class="content-right">
-                    <img class="plane" src="../assets/plane.svg"></img>
-                    <img class="tourist" src="../assets/tourist.png"></img>
+                    <img class="plane" src="./assets/plane.svg"></img>
+                    <img class="tourist" src="./assets/tourist.png"></img>
                 </div>
             </div>
 
@@ -87,7 +87,7 @@
 
         <section class="things-of-travel">
 
-            <img class="double-plane" src="../assets/double-plane.svg" />
+            <img class="double-plane" src="./assets/double-plane.svg" />
 
             <div class="text-things">
                 <h1>Things you need <strong>to do</strong></h1>
@@ -97,20 +97,20 @@
 
             <div class="cards-things">
                 <div class="card">
-                    <img class="icon" src="../assets/click.svg" />
-                    <img class="line" src="../assets/line-red.svg">
+                    <img class="icon" src="./assets/click.svg" />
+                    <img class="line" src="./assets/line-red.svg">
                     <h4>Sign Up</h4>
                     <p>Completes all the work associated with planning and processing</p>
                 </div>
                 <div class="card">
-                    <img class="icon" src="../assets/wallet.svg" />
-                    <img class="line" src="../assets/line-blue.svg">
+                    <img class="icon" src="./assets/wallet.svg" />
+                    <img class="line" src="./assets/line-blue.svg">
                     <h4>Worth of Money</h4>
                     <p>After successful access then book from exclusive deals & pricing</p>
                 </div>
                 <div class="card">
-                    <img class="icon" src="../assets/localization.svg" />
-                    <img class="line" src="../assets/line-yellow.svg">
+                    <img class="icon" src="./assets/localization.svg" />
+                    <img class="line" src="./assets/line-yellow.svg">
                     <h4>Exciting Travel</h4>
                     <p>Start and explore a wide range of exciting travel experience.</p>
                 </div>
@@ -126,17 +126,17 @@
             <div class="cards-exclusive">
                 <div class="cards-superiors">
                     <div class="card">
-                        <img class="icon" src="../assets/madrid.png" />
+                        <img class="icon" src="./assets/madrid.png" />
                         <div class="avaliation">
                             <h4>Madrid</h4>
                             <div>
-                                <img class="star" src="../assets/star.png" />
+                                <img class="star" src="./assets/star.png" />
                                 <p>4.8</p>
                             </div>
                         </div>
                         <div class="detail">
                             <div class="localization">
-                                <img src="../assets/localization.png" />
+                                <img src="./assets/localization.png" />
                                 <h5>Spain</h5>
                             </div>
                             <div class="description">
@@ -146,17 +146,17 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="icon" src="../assets/firenze.png" />
+                        <img class="icon" src="./assets/firenze.png" />
                         <div class="avaliation">
                             <h4>Firenze</h4>
                             <div>
-                                <img class="star" src="../assets/star.png" />
+                                <img class="star" src="./assets/star.png" />
                                 <p>4.5</p>
                             </div>
                         </div>
                         <div class="detail">
                             <div class="localization">
-                                <img src="../assets/localization.png" />
+                                <img src="./assets/localization.png" />
                                 <h5>Italy</h5>
                             </div>
                             <div class="description">
@@ -169,17 +169,17 @@
 
                 <div class="cards-inferiors">
                     <div class="card">
-                        <img class="icon" src="../assets/paris.png" />
+                        <img class="icon" src="./assets/paris.png" />
                         <div class="avaliation">
                             <h4>Paris</h4>
                             <div>
-                                <img class="star" src="../assets/star.png" />
+                                <img class="star" src="./assets/star.png" />
                                 <p>4.4</p>
                             </div>
                         </div>
                         <div class="detail">
                             <div class="localization">
-                                <img src="../assets/localization.png" />
+                                <img src="./assets/localization.png" />
                                 <h5>France</h5>
                             </div>
                             <div class="description">
@@ -189,17 +189,17 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="icon" src="../assets/lodon.png" />
+                        <img class="icon" src="./assets/lodon.png" />
                         <div class="avaliation">
                             <h4>Lodon</h4>
                             <div>
-                                <img class="star" src="../assets/star.png" />
+                                <img class="star" src="./assets/star.png" />
                                 <p>4.8</p>
                             </div>
                         </div>
                         <div class="detail">
                             <div class="localization">
-                                <img src="../assets/localization.png" />
+                                <img src="./assets/localization.png" />
                                 <h5>UK</h5>
                             </div>
                             <div class="description">
@@ -212,15 +212,15 @@
             </div>
 
             <div class="buttons-exclusive">
-                <img src="../assets/btn-1.png" />
-                <img src="../assets/btn-2.png" />
+                <img src="./assets/btn-1.png" />
+                <img src="./assets/btn-2.png" />
             </div>
 
         </section>
 
         <section class="vacation">
 
-            <img class="coconut" src="../assets/coconut-tree.svg" />
+            <img class="coconut" src="./assets/coconut-tree.svg" />
 
             <div class="text-vacation">
                 <h1>Best <strong>vacation plan</strong></h1>
@@ -230,13 +230,13 @@
             </div>
 
             <div class="buttons-vacation">
-                <img src="../assets/btn-1.png" />
-                <img src="../assets/btn-2.png" />
+                <img src="./assets/btn-1.png" />
+                <img src="./assets/btn-2.png" />
             </div>
 
             <div class="cards-vacation">
                 <div class="card">
-                    <img class="icon" src="../assets/japan.png" />
+                    <img class="icon" src="./assets/japan.png" />
                     <div class="avaliation">
                         <h4>Rome, Itlay</h4>
                         <div>
@@ -245,18 +245,18 @@
                     </div>
                     <div class="detail">
                         <div class="localization">
-                            <img src="../assets/arrow-localization.svg" />
+                            <img src="./assets/arrow-localization.svg" />
                             <h5>10 Days Trip</h5>
                         </div>
                         <div class="description">
-                            <img class="star" src="../assets/star.png" />
+                            <img class="star" src="./assets/star.png" />
                             <p>4.8</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="card">
-                    <img class="icon" src="../assets/uk.png" />
+                    <img class="icon" src="./assets/uk.png" />
                     <div class="avaliation">
                         <h4>London,UK</h4>
                         <div>
@@ -265,18 +265,18 @@
                     </div>
                     <div class="detail">
                         <div class="localization">
-                            <img src="../assets/arrow-localization.svg" />
+                            <img src="./assets/arrow-localization.svg" />
                             <h5>07 Days Trip</h5>
                         </div>
                         <div class="description">
-                            <img class="star" src="../assets/star.png" />
+                            <img class="star" src="./assets/star.png" />
                             <p>4.7</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="card">
-                    <img class="icon" src="../assets/japan.png" />
+                    <img class="icon" src="./assets/japan.png" />
                     <div class="avaliation">
                         <h4>Osaka,Japan</h4>
                         <div>
@@ -285,11 +285,11 @@
                     </div>
                     <div class="detail">
                         <div class="localization">
-                            <img src="../assets/arrow-localization.svg" />
+                            <img src="./assets/arrow-localization.svg" />
                             <h5>10 Days Trip</h5>
                         </div>
                         <div class="description">
-                            <img class="star" src="../assets/star.png" />
+                            <img class="star" src="./assets/star.png" />
                             <p>4.8</p>
                         </div>
                     </div>
@@ -299,7 +299,7 @@
 
         <section class="about">
 
-            <img class="three-planes" src="../assets/three-planes.svg">
+            <img class="three-planes" src="./assets/three-planes.svg">
 
             <div class="about-container">
                 <div class="content-left">
@@ -307,14 +307,14 @@
                     <p>Our Clients send us bunch of smilies with our services and we love them.</p>
 
                     <div class="buttons-about">
-                        <img src="../assets/btn-1.png" />
-                        <img src="../assets/btn-2.png" />
+                        <img src="./assets/btn-1.png" />
+                        <img src="./assets/btn-2.png" />
                     </div>
                 </div>
 
                 <div class="content-rigth">
-                    <img class="client" src="../assets/client.png">
-                    <img class="client-2" src="../assets/client-2.png">
+                    <img class="client" src="./assets/client.png">
+                    <img class="client-2" src="./assets/client-2.png">
                 </div>
             </div>
         </section>
@@ -325,13 +325,13 @@
             <div class="cards-update">
                 <div class="cards-superiors">
                     <div class="card">
-                        <img class="icon" src="../assets/building.png" />
+                        <img class="icon" src="./assets/building.png" />
                         <h4>The Amazing Difference a Year of Travelling.</h4>
                         <p>July 27, 2021</p>
                     </div>
 
                     <div class="card">
-                        <img class="icon" src="../assets/beach.png" />
+                        <img class="icon" src="./assets/beach.png" />
                         <h4>Travel far enough, you meet yourself.</h4>
                         <p>July 27, 2021</p>
                     </div>
@@ -339,13 +339,13 @@
 
                 <div class="cards-inferiors">
                     <div class="card">
-                        <img class="icon" src="../assets/cornerstone.png" />
+                        <img class="icon" src="./assets/cornerstone.png" />
                         <h4>How to Save Money While Visiting Africa .</h4>
                         <p>July 27, 2021</p>
                     </div>
 
                     <div class="card">
-                        <img class="icon" src="../assets/rock.png" />
+                        <img class="icon" src="./assets/rock.png" />
                         <h4>Reflections on 5 Months of Travel: Time to Hang</h4>
                         <p>July 27, 2021</p>
                     </div>
@@ -356,13 +356,13 @@
         <section class="subscribe">
             <div class="subscribe-container">
 
-                <img class="coconut" src="../assets/double-coconut.svg">
+                <img class="coconut" src="./assets/double-coconut.svg">
 
                 <h1>Subscribe and get exclusive deals & offer</h1>
 
                 <div class="input-subscribe">
                     <div class="input-email">
-                        <img src="../assets/mail.svg">
+                        <img src="./assets/mail.svg">
                         <input type="text" placeholder="Enter your mail">
                     </div>
                     <div class="button-email">
@@ -370,7 +370,7 @@
                     </div>
                 </div>
 
-                <img class="elipse" src="../assets/elipse.svg">
+                <img class="elipse" src="./assets/elipse.svg">
             </div>
         </section>
 
@@ -384,16 +384,16 @@
                 <div class="logo-footer">
                     <h2>Trabook</h2>
                     <figure class="logo">
-                        <img src="../assets/logo.svg" alt="Logo-agency" />
+                        <img src="./assets/logo.svg" alt="Logo-agency" />
                     </figure>
                 </div>
 
                 <p>Book your trip in minute, get full Control for much longer.</p>
 
                 <div class="icons">
-                    <img src="../assets/facebook.png">
-                    <img src="../assets/instagram.png">
-                    <img src="../assets/twitter.png">
+                    <img src="./assets/facebook.png">
+                    <img src="./assets/instagram.png">
+                    <img src="./assets/twitter.png">
                 </div>
             </div>
 
